# sphinxcontrib-d2

./: LICENSE  README.md  pyproject.toml
docs/source/: conf.py  example.rst  example_myst.md  index.rst
sphinxcontrib_d2/: __init__.py  d2.py
